# CMLManager

./: .gitignore  CMLManager.vcxproj  CMakeLists.txt  README.md  main.cpp
FileSystem/: CMakeLists.txt  FileSystem.CMakeListsFile.cpp  FileSystem.CMakeListsFile.h  FileSystem.Directory.cpp  FileSystem.Directory.h  FileSystem.File.cpp  FileSystem.File.h  FileSystem.FileBase.cpp  FileSystem.FileBase.h  FileSystem.FileOSSpecific.cpp  FileSystem.FileOSSpecific.h  FileSystem.FileSystem.cpp  FileSystem.FileSystem.h
