CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(CMLManager)


ADD_SUBDIRECTORY( FileSystem )

SET(
    SRC_FILES
    ${SRC_FILES}
    main.cpp
)

SET_SOURCE_FILES_PROPERTIES( HEADER_FILES PROPERTIES HEADER_FILE_ONLY TRUE )

ADD_DEFINITIONS(-std=c++11 -D_GLIBCXX_DEBUG)

ADD_EXECUTABLE( ${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES} )
