CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(CMLManager)


ADD_SUBDIRECTORY( FileSystem )

SET(
    SRC_FILES
    ${SRC_FILES}
    main.cpp
)

SET_SOURCE_FILES_PROPERTIES( HEADER_FILES PROPERTIES HEADER_FILE_ONLY TRUE )

IF( NOT MSVC )
    ADD_DEFINITIONS(-std=c++17 -D_GLIBCXX_DEBUG)
ENDIF()

ADD_EXECUTABLE( ${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES} )

IF( NOT MSVC )
    TARGET_LINK_LIBRARIES( ${PROJECT_NAME} stdc++fs )
ENDIF()